<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trade"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity= "center_horizontal"
            android:orientation="vertical"
            android:padding= "24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saasa_login"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textAlignment="center"

                />

            <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:id="@+id/emaill"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/emailzz"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/pass_log"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/passwordzz"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:text="@string/loginbtn"
                android:id="@+id/loginbtn"
                android:textSize="26sp"
                android:layout_marginTop="30dp"
                app:cornerRadius="20dp"
                android:textColor="@color/black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_account_sign_up_instead"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/noac"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>